[package]
name = "srv"
version = "0.1.0"
authors = ["danloh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
actix = "0.9.0"
actix-rt = "1.0"
actix-http = "1.0"
actix-web = "2.0.0-rc"
actix-cors = "0.2"
diesel = { version = "1.4.3", features = ["postgres","chrono","serde_json","r2d2"] }
r2d2 = "0.8.7"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"

jsonwebtoken = "6.0.1"
lettre = "0.9"
lettre_email = "0.9"
oauth2 = "=1.3.0"
rand = "0.7"

derive_more = "0.99.2"
regex = "1.3.1"
lazy_static = "1.4.0"
deunicode = "1.0.0"
bcrypt = "0.6.1"
chrono = { version = "0.4.10", features = ["serde"] }
log = "0.4.8"
fern = "0.5.9"
dotenv = "0.15.0"
base64 = "0.11.0"
num_cpus = "1.11.1"

actix-files = "0.2"
tera = "1.0"
unic-segment = "0.9.0"
pulldown-cmark = { version = "0.6", default-features = false }

reqwest = "0.9"
scraper = "0.11.0"

swirl = { git = "https://github.com/sgrif/swirl.git", rev = "de5d8bb" }
parking_lot = "0.10.0"
