[package]
name = "srv"
version = "0.5.0"
authors = ["danloh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
actix = "0.10.0"
actix-rt = "1.1"
actix-web = "3.1"
actix-cors = "0.4"
diesel = { version = "1.4.5", features = ["postgres","chrono","serde_json","r2d2"] }
r2d2 = "0.8"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"

jsonwebtoken = "7.2.0"
lettre = "0.9"
lettre_email = "0.9"
# oauth2 = "=1.3.0"
rand = "0.7"

derive_more = "0.99"
regex = "1.4.1"
lazy_static = "1.4.0"
deunicode = "1.1.1"
bcrypt = "0.8.2"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.5"

log = "0.4"
fern = "0.6.0"
dotenv = "0.15.0"
base64 = "0.13.0"
num_cpus = "1.13.0"

actix-files = "0.4"
unic-segment = "0.9.0"
pulldown-cmark = { version = "0.8.0", default-features = false }
ammonia = "3"
askama = "0.10.3"

reqwest = { version = "0.10", features = ["blocking"] }
scraper = "0.12.0"

swirl = { git = "https://github.com/sgrif/swirl.git", rev = "de5d8bb" }
parking_lot = "0.11.0"
